* Updated to babel-js, node-sass and jsdoc, see build_package.json

.Core:
* _getFillParams which is used in read, write, query, queryNodes can handle xPaths with * now

.Server:
* new SubjectFilterType mode attribute to specify how this filter type should be enabled. on read, write of both (default)
* fix Postgres (empty) CLOB and BLOB reading


Layout:
* introduced right sidebar
* no need to add bcd__sidebar-left-collaps-toggle etc divs/classes. Specify bcdEffectCollapse class at your bcd__sidebar-*__inner element

.Components:
* Cube
** minimize load of cubeConfiguration and dimensionsAndMeasures for cube/cubeConfigurator

* Grid
** use div container
** new option defaultButtons=true to show/hide action button
** allow button actions to be triggered via bcdGrid:save, bcdGrid:reset, bcdGrid:addRow on targetHtml
** major improvement to grouped headers
** fixed columnFilter for empty values
** bcduiInputField editor follows handsontable's grid cell movement rules, closes correctly on identical values

* DocUploader
** initial commit of a document uploader component, uses VFS (bcd_docUpload binding) to store data on scope/instance level (scope subjectsettings)

* Scorecard
** fix aspect definitions with multiple chooseCalc when statements
** calc:AspectRef can directly address a bindingItemId now

* Charts
** align echart adapter to support getData() and set chart:ChartsDrawn
** fix configurationFromWRS to correctly use unit and caption information in case of a standard cube (1rowDim/1colDim/1measure)

.Widgets
* InputField
** fix not disabled field until options model is ready (in case of wrapped optionmodels)

* fixedTableHeader
** createFixedTableHeader uses optimized and more compatible code
** new htmlBuilder parameters createHeaderFilters and createFixHeader

* createTableHeadFilter
** add option valueCaptionProvider which allows asynchronous providing of code/caption data for filter dialog

* comment widget